# GPS-Odometer_pi

./: CMakeLists.txt
include/: odometer_pi.h
libs/ocpn-api/msvc/: opencpn.lib
po/: POTFILES.in
src/: odometer_pi.cpp
